fix vertical alignment of image break text

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -8601,6 +8601,119 @@ th.hide-for-touch {
 }
 /* my styles */
 /*!  author: samarthmshah */
+.icon-bar.two-up .item {
+  width: 50%;
+}
+.icon-bar.two-up.vertical .item, .icon-bar.two-up.small-vertical .item {
+  width: auto;
+}
+@media only screen and (min-width: 40.0625em) {
+  .icon-bar.two-up.medium-vertical .item {
+    width: auto;
+  }
+}
+@media only screen and (min-width: 64.0625em) {
+  .icon-bar.two-up.large-vertical .item {
+    width: auto;
+  }
+}
+.icon-bar.three-up .item {
+  width: 33.3333%;
+}
+.icon-bar.three-up.vertical .item, .icon-bar.three-up.small-vertical .item {
+  width: auto;
+}
+@media only screen and (min-width: 40.0625em) {
+  .icon-bar.three-up.medium-vertical .item {
+    width: auto;
+  }
+}
+@media only screen and (min-width: 64.0625em) {
+  .icon-bar.three-up.large-vertical .item {
+    width: auto;
+  }
+}
+.icon-bar.four-up .item {
+  width: 25%;
+}
+.icon-bar.four-up.vertical .item, .icon-bar.four-up.small-vertical .item {
+  width: auto;
+}
+@media only screen and (min-width: 40.0625em) {
+  .icon-bar.four-up.medium-vertical .item {
+    width: auto;
+  }
+}
+@media only screen and (min-width: 64.0625em) {
+  .icon-bar.four-up.large-vertical .item {
+    width: auto;
+  }
+}
+.icon-bar.five-up .item {
+  width: 20%;
+}
+.icon-bar.five-up.vertical .item, .icon-bar.five-up.small-vertical .item {
+  width: auto;
+}
+@media only screen and (min-width: 40.0625em) {
+  .icon-bar.five-up.medium-vertical .item {
+    width: auto;
+  }
+}
+@media only screen and (min-width: 64.0625em) {
+  .icon-bar.five-up.large-vertical .item {
+    width: auto;
+  }
+}
+.icon-bar.six-up .item {
+  width: 16.66667%;
+}
+.icon-bar.six-up.vertical .item, .icon-bar.six-up.small-vertical .item {
+  width: auto;
+}
+@media only screen and (min-width: 40.0625em) {
+  .icon-bar.six-up.medium-vertical .item {
+    width: auto;
+  }
+}
+@media only screen and (min-width: 64.0625em) {
+  .icon-bar.six-up.large-vertical .item {
+    width: auto;
+  }
+}
+.icon-bar.seven-up .item {
+  width: 14.28571%;
+}
+.icon-bar.seven-up.vertical .item, .icon-bar.seven-up.small-vertical .item {
+  width: auto;
+}
+@media only screen and (min-width: 40.0625em) {
+  .icon-bar.seven-up.medium-vertical .item {
+    width: auto;
+  }
+}
+@media only screen and (min-width: 64.0625em) {
+  .icon-bar.seven-up.large-vertical .item {
+    width: auto;
+  }
+}
+.icon-bar.eight-up .item {
+  width: 12.5%;
+}
+.icon-bar.eight-up.vertical .item, .icon-bar.eight-up.small-vertical .item {
+  width: auto;
+}
+@media only screen and (min-width: 40.0625em) {
+  .icon-bar.eight-up.medium-vertical .item {
+    width: auto;
+  }
+}
+@media only screen and (min-width: 64.0625em) {
+  .icon-bar.eight-up.large-vertical .item {
+    width: auto;
+  }
+}
+
 body {
   font-family: 'Myriad Set Pro', 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
@@ -8611,6 +8724,11 @@ body {
   margin-bottom: 50px;
   padding-left: 20px 20px;
   text-align: center;
+}
+
+#mid-line {
+  width: 50%;
+  margin-left: 25%;
 }
 
 /*!  author: samarthmshah */
@@ -8636,7 +8754,7 @@ header #hero-image {
   opacity: 0.6;
   height: 100%;
   width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../images/14.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../images/9.jpg");
   background-position: top center;
   background-attachment: fixed;
   background-size: cover;
@@ -8921,7 +9039,7 @@ header #hero-image {
   opacity: 0.6;
   height: 100%;
   width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../images/5.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../images/7.jpg");
   background-position: top center;
   background-attachment: fixed;
   background-size: cover;
@@ -9132,33 +9250,33 @@ header #hero-image {
   background-image: url("../images/resume-bg.jpg");
 }
 
-.break-title, #about-me-dots #about-me-title {
+.break-title, #about-me-dots #about-me-title, .resume-break-title {
   position: absolute;
-  width: 98%;
+  width: 100%;
+  padding: 0 0.9375em 0 0.9375em;
   text-align: center;
 }
-.break-title h3, #about-me-dots #about-me-title h3 {
+.break-title h3, #about-me-dots #about-me-title h3, .resume-break-title h3 {
   color: white;
-  margin-top: 195px;
-  padding: 10px 20px;
+  padding: 165px 0;
   border-radius: 15px;
 }
 @media (max-width: 40em) {
-  .break-title h3, #about-me-dots #about-me-title h3 {
+  .break-title h3, #about-me-dots #about-me-title h3, .resume-break-title h3 {
     font-size: 2.25em;
     font-weight: 450;
     text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.5);
   }
 }
 @media (min-width: 40.063em) {
-  .break-title h3, #about-me-dots #about-me-title h3 {
+  .break-title h3, #about-me-dots #about-me-title h3, .resume-break-title h3 {
     font-size: 2.25em;
     font-weight: 500;
     text-shadow: 3px 4px 5px rgba(0, 0, 0, 0.5);
   }
 }
 @media (min-width: 64.063em) {
-  .break-title h3, #about-me-dots #about-me-title h3 {
+  .break-title h3, #about-me-dots #about-me-title h3, .resume-break-title h3 {
     font-size: 2.25em;
     font-weight: 600;
     text-shadow: 4px 5px 6px rgba(0, 0, 0, 0.5);
@@ -9191,6 +9309,20 @@ header #hero-image {
 
 .resume-icon {
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.resume-break-title h3 {
+  padding: 99px 0;
+}
+@media (max-width: 40em) {
+  .resume-break-title h3 .fa-4x {
+    font-size: 2em;
+  }
+}
+@media (min-width: 40.063em) {
+  .resume-break-title h3 .fa-4x {
+    font-size: 3em;
+  }
 }
 
 /*!  author: samarthmshah */
